--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 	<header>
 		<div class="user">
-			<img src="image/lakLw03j8l0.jpg" alt="avatar">
-			<h4>Резников Евгений</h4>
+			<h4 class="first-name">Евгений</h4>
+			<img src="image/lakLw03j8l0.jpg" alt="">
+			<h4 class="last-name">Резников</h4>
 		</div>	
 		</div>
 	</header>
