I rename files. I changed the way to them.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
@@ -12,7 +12,7 @@
 	<header>
 		<div class="user">
 			<h4 class="first-name">Евгений</h4>
-			<img src="image/lakLw03j8l0.jpg" alt="">
+			<img src="images/user-avatar.jpg" alt="user avatar">
 			<h4 class="last-name">Резников</h4>
 		</div>	
 		</div>
