--- a/registration.html
+++ b/registration.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Регистрация</title>
 </head>
 <body>
 <header>
         <div class="user">
             <h4>Евгений</h4>
-            <img src="image/lakLw03j8l0.jpg" alt="">
-            <h4">Резников</h4>
+            <img src="images/user-avatar.jpg" alt="user-avatar">
+            <h4>Резников</h4>
         </div>	
     </header>
         <article>
